# my-cool-cli

./: Cargo.toml  dist-workspace.toml
.github/workflows/: release.yml
wix/: main.wxs
