[package]
name = "my-cool-cli"
version = "0.1.35"
edition = "2024"
description = "My experimental Rust CLI tool"
authors = ["Saurabh Chaudhary <chaudharysaurabh@gmail.com>"]
homepage = "https://github.com/schaudhary2k/my-cool-cli"
repository = "https://github.com/schaudhary2k/my-cool-cli"
license = "MIT"

[dependencies]

# --- THE FIX: This header is mandatory to bypass the integrity panic ---
[workspace.metadata.dist]
allow-dirty = ["ci"]

[package.metadata.dist]
tap = "schaudhary2k/homebrew-tap"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
installers = ["shell", "homebrew"]
linux-packages = ["deb"]
windows-archive = ".zip"

[package.metadata.deb]
maintainer = "Saurabh Chaudhary <chaudharysaurabh@gmail.com>"
assets = [
    ["target/release/my-cool-cli", "usr/bin/my-cool-cli", "755"],
]

[profile.dist]
inherits = "release"
lto = "thin"