[package]
name = "my-cool-cli"
version = "0.1.36"
edition = "2024"
description = "My experimental Rust CLI tool"
authors = ["Saurabh Chaudhary <chaudharysaurabh@gmail.com>"]
homepage = "https://github.com/schaudhary2k/my-cool-cli"
repository = "https://github.com/schaudhary2k/my-cool-cli"
license = "MIT"

[dependencies]

[package.metadata.deb]
maintainer = "Saurabh Chaudhary <chaudharysaurabh@gmail.com>"
assets = [
    ["target/release/my-cool-cli", "usr/bin/my-cool-cli", "755"],
]

[profile.dist]
inherits = "release"
lto = "thin"